force-app/config/objects/Agent_Capability_Value__c/Agent_Capability_Value__c.object-meta.xml
<CustomObject>
    <description>Stores the actual capability values per agent. Replaces Agent_Skill__c from v1. Each record maps an agent to a capability dimension with comma or semicolon delimited values the agent can handle (e.g. Ontario,Quebec for Province capability).</description>
    <label>Agent Capability Value</label>
    <nameField>
        <displayFormat>ACV-{0000000}</displayFormat>
        <label>Agent Capability Value Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agent Capability Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>