force-app/config/objects/Agent_Capability_Value__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Parent Agent record. Each agent can have multiple capability value records (one per capability dimension).</description>
    <label>Agent</label>
    <referenceTo>Agent__c</referenceTo>
    <relationshipLabel>Agent Capability Values</relationshipLabel>
    <relationshipName>Agent_Capability_Values</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>