force-app/config/objects/Agent_Capability_Value__c/fields/Agent_Capability__c.field-meta.xml
<CustomField>
    <fullName>Agent_Capability__c</fullName>
    <description>Which capability dimension this value belongs to. References an Agent_Capability__mdt record (e.g. Province_Capability, Language_Capability).</description>
    <label>Agent Capability</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>