force-app/config/objects/Agent_Capability_Value__c/fields/Values__c.field-meta.xml
<CustomField>
    <fullName>Values__c</fullName>
    <description>Comma or semicolon delimited values the agent can handle for this capability. E.g. Ontario,Quebec or English;French. Long Text Area to support agents with many values (regions, product lines, etc.). Parsed by AgentMatcher using the same delimiter logic as ConditionBinder.</description>
    <label>Values</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>